--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -207,7 +207,8 @@
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
-      .footer{font-size:13px}
+      .footer{font-size:13px; padding-left:10px; padding-right:10px}
+	  
       #input-kota{width:100%!important}
       .reg-area{margin:0!important}
       }
@@ -274,7 +275,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <a href="https://buananetpbun.github.io/pcc-calculation.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
+          <a href="https://buananetpbun.github.io/wifid-wms-seamless.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
       <div style="clear:both"></div>
