--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -197,8 +197,8 @@
       }
       @media screen and (max-width:768px) 	  {
       .main-wrap{   display: block      }  
-      .sidebar,.content{border-radius:0px;display:block;width:100%}
-      .sidebar{height:auto;}
+      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar{height:auto; margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .logo-left a{margin-top:10px!important;font-size:25x}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
@@ -213,7 +213,7 @@
       .reg-area{margin:0!important}
       }
       @media screen and (max-width:600px) {
-        #wrap {padding:0}
+       
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
