--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -30,50 +30,37 @@
       --------------------------------------------------------------------------------*/  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
-      body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;margin:0}
-      html,body{height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;color:#333}
+      body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      html,body{height:100%;width:100%;margin-top:0;padding:0;font-size:15px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
       *{box-sizing:border-box}
-      .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
+      .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-size:14px;font-weight:700}
+      .logo{margin-top:15px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
-      .Menu{width:100%;border-bottom:1px solid #ccc;height:100%;padding-bottom:15px;margin-bottom:20px;font-weight:700}
-      #wrap{max-width:750px;margin:0 auto;padding:10px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:12px;border-top:1px solid #555}
-      .main-wrap{background-color:#f60}
-      .content{float:right;width:70%;height:450px;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
-      .sidebar{float:left;width:30%;height:450px;padding:10px;background-color:#ddd;border:1px solid #bbb;border-radius:5px 0 0 5px;font-size:14px}
-      .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+      #wrap{max-width:1080px;margin:0 auto;padding:5px}
+      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .main-wrap{display:flex}
+      .content{float:right;width:80%;padding:10px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;border-right:1px solid #ccc;background:#eee;height:auto;border-radius:0 5px 5px 0;font-size:14px}
+      .sidebar{float:left;width:30%;background-color:#eee;border:1px solid #ccc;height:auto;border-radius:5px 0 0 5px;font-size:15px;padding:8px 10px 10px}
+      .footer{padding-top:15px;padding-bottom:20px;clear:both;width:auto;font-size:13px;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:20px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
       a:active{color:#f60}
-      .menu{clear:both;width:auto;padding-bottom:13px}
-      .menu1{width:360px;font-weight:700;background-color:#4CAF50;padding:6px;color:#fff;display:inline-block;margin:0}
-      .menu1 a:link{text-decoration:none;color:#fff}
-      .menu1 a:visited{text-decoration:none;color:#fff}
-      .menu2{width:300px;font-weight:700;background-color:#bbb;padding:6px;color:#fff;display:inline-block;margin:0}
-      .menu2 a:link{text-decoration:none;color:#fff}
-      .menu2 a:visited{text-decoration:none;color:#fff}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:100%;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:110px;font-size:14px;font-weight:700;cursor:pointer;border-radius:5px;margin-bottom:5px}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
-      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;font-weight:700;margin-bottom:5px;font-size:14px!important;border-radius:5px}
-      label{padding:5px 5px 5px 0;display:inline-block}
-      input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
+      input[type=checkbox]{margin-right:7px}
+      input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #ccc;border-radius:1px;resize:vertical;font-size:14px!important;border-radius:5px}
+      label{padding:8px 5px 5px;display:inline-block}
+      input[type=submit]{background-color:#f60;color:#fff;padding:13px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
-      .col-25{float:left;width:25%;margin-top:6px}
-      .col-75{float:left;width:75%;margin-top:6px}
-      .row:after{content:"";display:table;clear:both}
-      .list-game{height:200px;background:#fff;overflow:scroll;overflow-x:hidden;width:100%;margin-top:2px;padding:3px;border:1px solid rgba(0,0,0,0.25);border-radius:5px}
-      .list-game label{padding:0;display:inline-block}
-      .list-mangle{height:400px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
-      table,tr,td{border:none}
-      table{border-collapse:collapse;width:100%;font-size:14px}
-      td,th{border:1px solid #ddd;text-align:left;padding:8px}
+      .list-mangle{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       @media screen and (max-width:768px) {
+      .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
-      .sidebar{height:200px;margin-bottom:5px}
+      .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .logo-left a{margin-top:10px!important;font-size:25x}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
@@ -82,7 +69,7 @@
       .logo{width:100%}
       .logo-left{justify-content:center;display:flex;width:100%}
       .logo-right{justify-content:center;width:100%;display:flex}
-      .footer{font-size:13px}
+      .footer{font-size:13px;padding-left:10px;padding-right:10px}
       #input-kota{width:100%!important}
       .reg-area{margin:0!important}
       }
@@ -91,7 +78,6 @@
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
       .sidebar{padding:10px}
-      #wrap{padding:5px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
