--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -16,6 +16,7 @@
     <meta property="og:url" content="https://buananetpbun.github.io/vpn-game-generator.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
+    <link rel="stylesheet" href="./login/login.css">	
     <style>
       /* ------------------------------------------------------------
       ###############################################################
@@ -58,9 +59,10 @@
       .row:after{content:"";display:table;clear:both}
       .list-game{height:200px;background:#fff;overflow:scroll;overflow-x:hidden;width:100%;margin-top:2px;padding:3px;border:1px solid rgba(0,0,0,0.25);border-radius:5px}
       .list-game label{padding:0;display:inline-block}
-      .list-mangle{border-radius:5px;height:605px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc}
+      .list-mangle{border-radius:5px;height:600px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc}
       table,tr,td{border:none}
       @media screen and (max-width:768px) {
+	  .list-mangle{height:300px}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
@@ -94,7 +96,6 @@
       .hide-homepage{display:none}
       }
     </style>
-    <link rel="stylesheet" href="./login/login.css">
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
