--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -58,6 +58,7 @@
       input[type=submit]:hover{background-color:#45a049}
       .list-mangle{height:525px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       @media screen and (max-width:768px) {
+	  .list-mangle{height:400px;}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:auto;margin-bottom:5px}
