--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -31,214 +31,72 @@
       # Sosmed    : https://fb.me/buananetmikrotik	
       ####################################################################
       -------------------------------------------------------------------- */  
-      *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
-      body, div, span, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, textarea, p, blockquote, th, td, tr, table{margin:0; padding:0}
-      body { font-size:14px; font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; margin:0px;}
-      html, body {
-      height: 100%;
-      width:100%;
-      margin-top: 0px;
-      padding:0;
-      background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ;     
-      }
-      * {
-      box-sizing: border-box;
-      }
-      .logo {
-      margin-top:10px; 
-      color: #ddd;
-      text-decoration:none;
-      font-size:25px;
-      font-weight:bold; 
-      }	
-      .logo a{
-      color:#ddd !important;
-      text-decoration:none !important;
-      }
-
-      #wrap{
-      max-width:735px;
-      margin:0 auto;
-      padding:5px;
-      }
-      .header{
-      height:auto; 
-      width:100%;
-      margin-top:5px;
-      margin-bottom:10px;
-      border-top:1px solid #555;
-      }
-      .main-wrap{
-      display: flex;
-      }   
-      .content{
-      flex:1;
-      float:right;
-      padding: 10px;
-      border-top:1px solid #bbb;
-      border-bottom:1px solid #bbb;
-      border-right:1px solid #bbb;
-      background:#ddd;
-      border-radius:0 5px 05px 0; 
-      }
-      .sidebar{
-      float:left;
-      width:250px;
-      Padding-top:8px;
-      padding-left: 30px;
-      Padding-right:20px;
-      Padding-bottom:20px;
-      background-color:#ddd;
-      border:0px solid #bbb; 
-      height:auto;
-      border-radius:5px 0 0 5px;   
-      }
-      .footer{
-      font-size:13px;
-      padding-top:10px;
-      padding-bottom:15px; 
-      text-align:center;
-      clear:both;
-      width:auto;
-      color:#ddd
-      }
-      h2 {
-      color:#ff6600;;
-      }	  	  
-      h1 {
-      color:#ddd;
-      font-size:22px;
-      margin-bottom:10px;
-      margin-top:10px;
-      }
-      a:link {
-      color: #ff6600;
-      }
-      a:visited {
-      color: #ff6600;
-      }
-      a:hover {
-      color: #ff6600;
-      }
-      a:active {
-      color: #ff6600;
-      }
-      button {
-      color: #fff;
-      background-color: #ff6600;
-      border-color: #ff6600;
-      border:none;
-      padding:8px;
-      margin-right:5px;
-      width:100%;
-      font-size:15px;
-      font-weight:bold;
-      cursor: pointer;
-      border-radius: 5px;
-      color: #fff;
-      }
-      button:hover {
-      background-color: #ccc;
-      color: #111;
-      }
-      .row:after {
-      content: "";
-      display: table;
-      clear: both;
-      }  
-      input[type=checkbox]{
-      margin-right:7px; 
-      }
-      input[type=text], select, textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #bbb;
-      border-radius: 1px;
-      resize: vertical;
-      margin-bottom:12px;
-      font-size:15px !important;
-      border-radius:5px; 
-      }
-      label {
-      padding: 5px 5px 5px 0;
-      display: inline-block;
-      }
-      input[type=submit] {
-      background-color: #ff6600;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 1px;
-      cursor: pointer;
-      float: right;
-      border-radius:5px; 
-      }
-      input[type=submit]:hover {
-      background-color: #45a049;
-      }
-      .view-template {
-      height: 605px;
-      width: 428px;
-      padding: 4px;
-      margin-top:8px;
-      margin-bottom:8px;
-      border-radius:4px;
-      background:#fff
-      }
-      .qrcode {
-      padding-top:185px;
-      padding-left:80px;
-      position:absolute;
-      }
-      .text-ssid {
-      padding-top:28px;
-      padding-left:90px;
-      position:absolute;
-      font-size:17pt;
-      font-weight: bold;
-      color:#E12D00;
-      position:absolute;
-      }
-      .myImage {
-      padding:0px;
-      margin:0px;
-      }
-      @media screen and (max-width:768px) {
-     
-	  .list-mangle{height:400px;}
-      .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
-      .sidebar{height:auto;margin-bottom:5px}
-      .header h1{max-width:100%;justify-content:center}
-      .logo-left a{margin-top:10px!important;font-size:25x}
-      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
-      h1{font-size:21px;text-align:center}
-      .mymenu{width:98%!important}
-      .logo{width:100%}
-      .logo-left{justify-content:center;display:flex;width:100%}
-      .logo-right{justify-content:center;width:100%;display:flex}
-      .footer{font-size:13px;padding-left:5px;padding-right:5px}
-      #input-kota{width:100%!important}
-      .reg-area{margin:0!important}
-          .content{overflow: scroll; 
-      }
-      @media screen and (max-width:600px) {
-      h1{font-size:19px}
-      .logo-left a{margin-top:10px!important;font-size:20px}
-      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
-      .sidebar{padding:10px}
-      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
-      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
-      .mymenu{padding-left:0;padding-right:0}
-      .mymenu ul{background:none!important;justify-content:center;display:flex}
-      }
-      @media screen and (max-width:500px) {
-      .show-homepage-menu{display:flex;justify-content:center;width:100%}
-      .avatar{display:none}
-      }
-      @media screen and (max-width:350px) {
-      .hide-homepage{display:none}
-      }	  
+*{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
+body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
+body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+html,body{height:100%;width:100%;margin-top:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
+*{box-sizing:border-box}
+.logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
+.logo a{color:#ddd!important;text-decoration:none!important}
+#wrap{max-width:720px;margin:0 auto;padding:5px}
+.header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+.main-wrap{display:flex}
+.content{flex:1;float:right;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
+.sidebar{float:left;width:250px;background-color:#ddd;border:0 solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:8px 20px 20px 30px}
+.footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
+h2{color:#f60}
+h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
+a:link{color:#f60}
+a:visited{color:#f60}
+a:hover{color:#f60}
+a:active{color:#f60}
+button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;margin-right:5px;width:100%;font-size:15px;font-weight:700;cursor:pointer;border-radius:5px;color:#fff}
+button:hover{background-color:#ccc;color:#111}
+.row:after{content:"";display:table;clear:both}
+input[type=checkbox]{margin-right:7px}
+input[type=text],select,textarea{width:100%;padding:10px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:12px;font-size:15px!important;border-radius:5px}
+label{padding:5px 5px 5px 0;display:inline-block}
+input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
+input[type=submit]:hover{background-color:#45a049}
+.view-template{height:605px;width:428px;padding:4px;margin-top:8px;margin-bottom:8px;border-radius:4px;background:#fff}
+.qrcode{padding-top:185px;padding-left:80px;position:absolute}
+.text-ssid{padding-top:28px;padding-left:90px;position:absolute;font-size:17pt;font-weight:700;color:#E12D00;position:absolute}
+.myImage{padding:0;margin:0}
+@media screen and (max-width:768px) {
+.list-mangle{height:400px}
+.main-wrap{display:block}
+.sidebar,.content{border-radius:5px;display:block;width:100%}
+.sidebar{height:auto;margin-bottom:5px}
+.header h1{max-width:100%;justify-content:center}
+.logo-left a{margin-top:10px!important;font-size:25x}
+.logo-left img{height:40px;width:50px;margin-top:-5px!important}
+h1{font-size:21px;text-align:center}
+.mymenu{width:98%!important}
+.logo{width:100%}
+.logo-left{justify-content:center;display:flex;width:100%}
+.logo-right{justify-content:center;width:100%;display:flex}
+.footer{font-size:13px;padding-left:5px;padding-right:5px}
+#input-kota{width:100%!important}
+.reg-area{margin:0!important}
+.content{overflow:scroll}
+}
+@media screen and (max-width:600px) {
+h1{font-size:19px}
+.logo-left a{margin-top:10px!important;font-size:20px}
+.logo-left img{height:auto;width:40px;margin-top:-5px!important}
+.sidebar{padding:10px}
+.mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+.show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+.mymenu{padding-left:0;padding-right:0}
+.mymenu ul{background:none!important;justify-content:center;display:flex}
+}
+@media screen and (max-width:500px) {
+.show-homepage-menu{display:flex;justify-content:center;width:100%}
+.avatar{display:none}
+}
+@media screen and (max-width:350px) {
+.hide-homepage{display:none}
+}
     
     </style>
    
