--- a/mirkotik-indonesia-timezone.html
+++ b/mirkotik-indonesia-timezone.html
@@ -36,13 +36,13 @@
       .logo{margin-top:10px;color:#ddd;text-decoration:none;font-size:25px;font-weight:700}
       .logo a{color:#ddd!important;text-decoration:none!important}
       #wrap{max-width:840px;margin:0 auto;padding:10px}
-      .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
+      .header{height:auto;width:100%;margin-top:5px;margin-bottom:5px;border-top:1px solid #555}
       .content{float:right;width:100%;padding:10px;border-top:1px solid #bbb;background:#ddd;border-radius:5px 5px 5px 5px}
       .sidebar{max-width:100%;padding:20px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px 5px 5px 5px;font-size:14px}
       .sidebar img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:23px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -58,7 +58,8 @@
       #input-kota{max-width:100%}
       .mikrotik-logo{display:none}
       @media screen and (max-width:768px) {
-      .header h1{max-width:100%;justify-content:center}
+      .header h1{max-width:100%;justify-content:center; border-top:0 !important}
+	  .header {border:none}
       .logo-left a{margin-top:10px!important;font-size:25x}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
