--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -42,7 +42,7 @@
       .sidebar{float:left;width:30%;height:450px;padding:10px;background-color:#ddd;border:1px solid #bbb;border-radius:5px 0 0 5px;font-size:14px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
-      h1{color:#ddd;font-size:20px;margin-bottom:10px;margin-top:10px}
+      h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
@@ -74,6 +74,7 @@
       .sidebar,.content{border-radius:5px;display:block;width:100%}
       .sidebar{height:200px;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
+	  .header {border:none}	  
       .logo-left a{margin-top:10px!important;font-size:25x}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
