--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://buananetpbun.github.io/mikrotik/highlightjs/styles/github.css">
     <script src="https://buananetpbun.github.io/mikrotik/highlightjs/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    <link rel="stylesheet" href="./login/login.css">	
     <style>
       /* -----------------------------------------------------
       ########################################################
@@ -56,16 +57,8 @@
       color:#ddd !important;
       text-decoration:none !important;
       }
-      .Menu{
-      width:100%;
-      border-bottom:1px solid #ccc;
-      height:100%;
-      padding-bottom: 15px;
-      margin-bottom: 20px;
-      font-weight:bold;
-      }
       #wrap{
-      width:1000px;
+      max-width:1000px;
       margin:0 auto;
       padding:10px;
       }
@@ -80,7 +73,6 @@
       background-color:#ff6600;
       }     
       .content{
-      float:left;
       width:100%;
       padding: 20px;
       border-top:1px solid #bbb;
@@ -88,12 +80,12 @@
       border-radius: 0 0 5px 5px;
       }
       .sidebar{
-      float:left;
       width:100%;
       padding: 20px;
       background-color:#f9f9f9;
       border-right:1px solid #bbb; 
       border-radius: 5px;  
+	   overflow: auto
       }
       .footer{
       font-size:13px;
@@ -129,47 +121,6 @@
       }
       h2 {
       color:#ff6600;;
-      }
-      .menu {
-      clear:both;
-      width:auto;
-      padding-bottom:13px;
-      }
-      .menu1 {
-      width:360px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#4CAF50;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu1 a:link {
-      text-decoration:none;
-      color:white;
-      }
-      .menu1 a:visited{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 {
-      width:300px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#bbb;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu2 a:link{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 a:visited{
-      text-decoration:none;
-      color:white;
       }
       button {
       color: #fff;
@@ -234,32 +185,6 @@
       display: table;
       clear: both;
       }
-      .list-game {
-      height: 200px;
-      background:white;
-      overflow: scroll;
-      overflow-x: hidden;
-      width: 100%;
-      margin-top:2px;
-      padding: 3px;
-      border: 1px solid rgba(0,0,0,0.25);
-      border-radius: 5px; 
-      }
-      .list-game label {
-      padding: 0;
-      display: inline-block;
-      } 
-      .list-mangle {
-      height: 90%;
-      background:#fff;
-      overflow: auto;
-      overflow-x: auto;
-      width: 100%;
-      padding-bottom: 4px;
-      margin-top:10px;
-      border: 1px solid #ccc;
-      border-radius: 5px; 
-      }
       table, tr, td {
       border: none;
       }
@@ -276,8 +201,42 @@
       tr:nth-child(even) {
       background-color: #eee;
       }
+      @media screen and (max-width:768px) {
+      .header h1{max-width:100%;justify-content:center}
+      .header{border:none}
+      .logo-left a{margin-top:10px!important;font-size:25x}
+      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      h1{font-size:21px;text-align:center}
+      .mymenu{width:98%!important}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{justify-content:center;width:100%;display:flex}
+      .footer{font-size:13px}
+      #input-kota{width:100%!important}
+      .reg-area{margin:0!important}
+	  
+      }
+      @media screen and (max-width:600px) {
+      h1{font-size:19px}
+      .logo-left a{margin-top:10px!important;font-size:20px}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .sidebar{padding:10px}
+      #wrap{padding:5px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      .avatar{display:none}
+	  .routeros {width:100%}
+      }
+      @media screen and (max-width:350px) {
+      .hide-homepage{display:none}
+      }	  
     </style>
-    <link rel="stylesheet" href="./login/login.css">
+
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
@@ -285,33 +244,44 @@
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div id="mymenu" class="mymenu">
+      <div class="mikrotik-logo" >
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+      </div>
       <ul>
         <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
       </ul>
-      <div id="homepage" class="hide">
-        <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-        <span class="avatar">
+      <div class="show-homepage-menu">
+        <div id="homepage" class="hide">
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
+          <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-         </span>		
-        <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
-        
+          </span>		
+          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>
+        </div>
       </div>
     </div>
     <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/advanced-mikrotik-protection.html"><img style="float:left; margin-top:-7px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
-        <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+        <div class="logo-right" style="float:right;">
+          <div style="float:right">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          </div>
+          <div style="float:right; margin-right:5px; margin-top:1px">
+            <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+          </div>
         </div>
-        <div style="float:right; margin-right:5px; margin-top:1px">
-          <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="logo-left" style="float:left;"> 
+          <a href="https://buananetpbun.github.io/advanced-mikrotik-protection.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
+      <div style="clear:both"></div>	  
       <div class="header">
       </div>
       <div class="sidebar">
@@ -321,11 +291,11 @@
         <br>  <br>  
         <table>
           <tr>
-            <th style="background-color:#ccc; font-size:16px">Mikrotik Port Service</th>
-            <th style="background-color:#ccc; font-size:16px">Description</th>
+            <th style="width:30%;background-color:#ccc; font-size:16px">Mikrotik Port Service</th>
+            <th style="width:70%;background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">API (8728)</label>
             </td>
             <td>
@@ -340,7 +310,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">API-SSL (8729)</label>
             </td>
             <td>
@@ -355,7 +325,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold" >FTP (21)</label>
             </td>
             <td>
@@ -370,7 +340,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">SSH (22)</label>
             </td>
             <td>
@@ -385,7 +355,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">TELNET (23)</label>
             </td>
             <td>
@@ -400,7 +370,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">WINBOX (8291)</label>
             </td>
             <td>
@@ -415,7 +385,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">WWW WEBFIG (80)</label>
             </td>
             <td>
@@ -430,7 +400,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">WWW-SSL WEBFIG (443)</label>
             </td>
             <td>
@@ -449,7 +419,7 @@
             <th style="background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Protect Neighbors Discovery</label>
             </td>
             <td>
@@ -463,7 +433,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Protect Mac Server</label>
             </td>
             <td>
@@ -480,7 +450,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Bootloader Protector</label>
             </td>
             <td>
@@ -497,7 +467,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Protect Btest Server</label>
             </td>
             <td>
@@ -511,7 +481,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Protect RoMON</label>
             </td>
             <td>
@@ -529,7 +499,7 @@
             <th style="background-color:#ccc; font-size:16px">Description</th>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Protect Port Service from Internet</label>
             </td>
             <td>
@@ -547,7 +517,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Anti Hack from EXPLOIT</label>
             </td>
             <td>
@@ -564,7 +534,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Memcrashed - Amplification Attacks UDP 11211</label>
             </td>
             <td>
@@ -578,7 +548,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Block Access Modem</label>
             </td>
             <td>
@@ -596,7 +566,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Drop TRACEROUTE</label>
             </td>
             <td>
@@ -611,7 +581,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold"> Anti NETCUT</label>
             </td>
             <td>
@@ -641,7 +611,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Block Open Recursive DNS</label>
             </td>
             <td>
@@ -660,7 +630,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Block Open PROXY</label>
             </td>
             <td>
@@ -678,7 +648,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Anti DDoS Attacks</label>
             </td>
             <td>
@@ -696,7 +666,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Anti PORT SCAN</label>
             </td>
             <td>
@@ -718,7 +688,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Anti Hack from BruteForce FTP + SSH</label>
             </td>
             <td>
@@ -740,7 +710,7 @@
             </td>
           </tr>
           <tr>
-            <td style="width:300px">
+            <td>
               <label style="font-weight:bold">Port Knocking Use Icmp + Packet Size</label>
             </td>
             <td>
