--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -64,7 +64,7 @@
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
 	  .header {border:none}	  
-      .logo-left a{margin-top:10px!important;font-size:25x}
+      .logo-left a{margin-top:10px!important;font-size:25px}
       .logo-left img{height:40px;width:50px;margin-top:-5px!important}
       h1{font-size:21px;text-align:center}
       .mymenu{width:98%!important}
